--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <link
       rel="shortcut icon"
-      href="../assets/icons/favicon.ico"
+      href="assets/icons/favicon.ico"
       type="image/x-icon"
     />
     <title>AcadMaster</title>
   </head>
   <body oncontextmenu="(e)=> e.preventDefault()">
     <div id="root"></div>
-    <script type="module" src="./containers/Main.tsx"></script>
+    <script type="module" src="containers/Main.tsx"></script>
   </body>
 </html>
