--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body oncontextmenu="(e)=> e.preventDefault()">
     <div id="root"></div>
-    <script type="module" src="containers/Main.tsx"></script>
+    <script type="module" src="Main.tsx"></script>
   </body>
 </html>
